--- a/img-service/Dockerfile
+++ b/img-service/Dockerfile
@@ -1,13 +1,14 @@
 from alpine
 
 ENV PYTHONUNBUFFERED=1
+ENV RABBIT_MQ_HOST=localhost
+ENV RABBIT_MQ_HOST=5672
 RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
 RUN python3 -m ensurepip
 RUN pip3 install --no-cache --upgrade pip setuptools
-COPY ./src /usr/src/app
-
-
 WORKDIR /usr/src/app
-
+COPY ./src /usr/src/app
 RUN pip3 install -r requirements.txt
+
+CMD [ "python","app.py" ]
 
