--- a/.env
+++ b/.env
@@ -6,7 +6,10 @@ CSharp_API_SecOutPORT=40081
 CSharp_API_Image=CSharp_API_Image
 
 RabbitMQ_Image=rabbitmq:3.12.3-management-alpine
-RabbitMQManagementPort = 15672
-RabbitMQManagement_OutPORT = 15672
-RabbitMQServer_OutPORT = 5672
-RabbitMQServerPort = 5672
+RabbitMQManagementPort=15672
+RabbitMQManagement_OutPORT=15672
+RabbitMQServer_OutPORT=5672
+RabbitMQServerPort=5672
+RabbitMQServerHost=rabbitmq
+
+Images_API_Image=imageresizer:0.0.1
