explained environment variables available

--- a/pdf-service/Dockerfile
+++ b/pdf-service/Dockerfile
@@ -1,5 +1,8 @@
 FROM rustlang/rust:nightly
 
+# Environment variable for setting rabbitmq connection uri
+# ENV RABBITMQ_URI="amqp://guest:guest@localhost:5673/%2F"
+
 WORKDIR /usr/src/app
 COPY . .
 
