fixed index out of bounds error on filename, reading headers from messages in imageservice, added more errorhandling

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - image:/app
+      - ./output_images:/usr/output_images
 
   pdfservice:
     container_name: pdfservice
